--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,7 +22,11 @@
                     <button id="searchButton">Search</button>
                 </div>
                 <div id="displayContainer">
-                    <!--- songs go here --->
+                    <p>
+                        {% for song in songs %}
+                            {% include 'songItem.html' %}
+                        {% endfor %}
+                    </p>
                 </div>
             </div>
         </div>
