Lots of changes:
1. Replaced Flask prototype with Node.js Express runtime environmen

2. Handlebars templating engine
Why Handlebars?
- serverside rendering provides good SEO
- Web framework like React seems overkill for a website with such a simple funciton

3. MVC structure for understandibility

4. Removed vestigial files from bash script
- better to start from ground up than to try and fit old code into a new application

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -103,8 +103,9 @@ html, body {
     width: 100%;
     overflow: scroll;
     background-color: #819dc9;
-    
+    align-items: center;
 }
+
 
 #displayArea {
     width: 100%;
