--- a/public/css/index.css
+++ b/public/css/index.css
@@ -26,7 +26,7 @@ html, body {
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    height: 80vh;
+    height: 100vh;
     width: 100vw;
 }
 
@@ -91,9 +91,14 @@ html, body {
     font-size: 16px;
     font-weight: bold;
     color: black;
-    background-color: #9db8e2;
+    background-color: #819dc9;
     border: solid white 2px;
     border-radius: 5px;
+}
+
+#searchButton:hover {
+    background-color: #9db8e2;
+    cursor: pointer;
 }
 
 #displayContainer {
@@ -120,6 +125,8 @@ html, body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    border: solid white 2px;
+    border-radius: 10px;
 }
 #footer {
     width: 100%;
